--- a/app/views/user_mailer/2nd_reminder.html.erb
+++ b/app/views/user_mailer/2nd_reminder.html.erb
@@ -180,7 +180,7 @@
                                                         <tbody><tr>
 
                                                           <td align="center" valign="middle" width="24" class="muMailFollowIconContent">
-                                                            <a href="http://www.facebook.com/MumukiProject" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-facebook-48.png" style="display:block;" height="24" width="24" class=""></a>
+                                                            <a href="http://www.facebook.com/MumukiOrg" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-facebook-48.png" style="display:block;" height="24" width="24" class=""></a>
                                                           </td>
 
 
@@ -212,7 +212,7 @@
                                                         <tbody><tr>
 
                                                           <td align="center" valign="middle" width="24" class="muMailFollowIconContent">
-                                                            <a href="http://www.twitter.com/MumukiProject" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-twitter-48.png" style="display:block;" height="24" width="24" class=""></a>
+                                                            <a href="http://www.twitter.com/MumukiOrg" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/outline-light-twitter-48.png" style="display:block;" height="24" width="24" class=""></a>
                                                           </td>
 
 
