--- a/app/views/layouts/_progress_listing.html.erb
+++ b/app/views/layouts/_progress_listing.html.erb
@@ -1,10 +1,17 @@
 <ul class="progress-listing">
-  <% guide.assignments_for(current_user).each do |assignment| %>
-      <% cache [assignment.exercise, assignment.status, Organization.current] do %>
-          <li <%= turbolinks_enable_for(assignment.exercise) %>>
-            <%= assignment_status_icon assignment %>
-            <%= link_to_path_element(assignment.exercise) %>
-          </li>
-      <% end %>
+  <%
+    assignments = guide.assignments_for(current_user)
+    statuses = assignments.map(&:status)
+  %>
+  <% cache_if statuses.chunk_while(&:==).count <= 2, [guide, statuses, Organization.current] do %>
+    <% assignments.each do |assignment| %>
+        <% cache [assignment.exercise, assignment.status, Organization.current] do %>
+            <li <%= turbolinks_enable_for(assignment.exercise) %>>
+              <%= assignment_status_icon assignment %>
+              <%= link_to_path_element(assignment.exercise) %>
+            </li>
+        <% end %>
+    <% end %>
   <% end %>
+
 </ul>
