Add custom mu-light CodeMirror theme

--- a/app/assets/stylesheets/mumuki_laboratory/application.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application.scss
@@ -15,3 +15,4 @@ $da-font-path: asset-path('assets');
 @import "application/modules";
 @import "application/errors";
 @import "application/alerts";
+@import "application/codemirror-themes";
