--- a/app/views/layouts/exercise_inputs/editors/_upload.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_upload.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
   <textarea id="solution_content" type="text" name="solution[content]" style="display: none"></textarea>
-  <input id="upload-input" type="file" class="upload submission-control" size="5120" accept=".<%= @exercise.language.extension %>" />
+  <input id="upload-input" type="file" class="upload submission-control" accept=".<%= @exercise.language.extension %>" />
   <label id="mu-upload-label" for="upload-input" class="btn btn-success">
     <%= fa_icon(:upload, text: t(:upload_solution), id: "mu-upload-text") %>
   </label>
