Replace :upload_solution locale with :select_file

--- a/app/views/layouts/exercise_inputs/editors/_upload.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_upload.html.erb
@@ -2,6 +2,6 @@
   <textarea id="solution_content" type="text" name="solution[content]" style="display: none"></textarea>
   <input id="upload-input" type="file" class="upload submission-control" accept=".<%= @exercise.language.extension %>" />
   <label id="mu-upload-label" for="upload-input" class="btn btn-success">
-    <%= fa_icon(:upload, text: t(:upload_solution), id: "mu-upload-text") %>
+    <%= fa_icon(:upload, text: t(:select_file), id: "mu-upload-text") %>
   </label>
 </div>
