--- a/app/views/exam_authorization_requests/show.html.erb
+++ b/app/views/exam_authorization_requests/show.html.erb
@@ -2,4 +2,16 @@
   <%= breadcrumbs @authorization_request %>
 <% end %>
 
-Como sí o como no.
+<div class="row">
+  <div class="mu-inline-block-left">
+    <h1>
+      <%= t :exam_registration_to, description: @authorization_request.exam_registration.description %>
+    </h1>
+  </div>
+</div>
+
+<% if @authorization_request.approved? %>
+  <%= t :exam_authorization_request_approved_html, date: l(@authorization_request.exam.start_time, format: :long) %>
+<% else %>
+  <%= t :exam_authorization_request_rejected %>
+<% end %>
