--- a/app/views/users/_activity.erb
+++ b/app/views/users/_activity.erb
@@ -9,15 +9,15 @@
     <%= render partial: 'activity_indicator',
                locals: {
                  title: t(:exercises),
-                 stats: [{name: t(:solved_exercises_count), value: @activity.exercises.solved_count},
-                         {name: t(:solved_exercises_percentage), value: @activity.exercises.solved_percentage}]
+                 stats: [{name: t(:solved_exercises_count), value: @activity[:exercises][:solved_count]},
+                         {name: t(:solved_exercises_percentage), value: "#{@activity[:exercises][:solved_count] / @activity[:exercises][:count] * 100}%"}]
                } %>
 
     <%= render partial: 'activity_indicator',
                locals: {
                  title: t(:forum),
-                 stats: [{name: t(:messages), value: @activity.messages.count},
-                         {name: t(:approved_messages), value: @activity.messages.approved}]
+                 stats: [{name: t(:messages), value: @activity[:messages][:count]},
+                         {name: t(:approved_messages), value: @activity[:messages][:approved]}]
                } %>
   </div>
 
