Prevent uploading of files over 256kb

--- a/app/views/layouts/exercise_inputs/editors/_upload.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_upload.html.erb
@@ -5,7 +5,7 @@
   <input id="upload-input" type="file" class="upload submission-control hidden" mu-upload-file-limit=<%= @max_file_size %> accept=".<%= @exercise.language.extension %>" />
   <div>
     <label id="mu-upload-label" for="upload-input" class="btn btn-success">
-      <%= fa_icon(:upload, text: t(:select_file), id: "mu-upload-text") %>
+      <%= fa_icon(:upload, text: t(:select_file), id: "mu-upload-icon") %>
     </label>
     <div id="mu-upload-file-limit-exceeded" class="hidden">
       <%= fa_icon("exclamation-triangle", text: t(:file_exceeds_max_size, size_kb: (@max_file_size / 1000))) %></div>
