--- a/app/views/layouts/exercise_inputs/editors/_upload.html.erb
+++ b/app/views/layouts/exercise_inputs/editors/_upload.html.erb
@@ -2,9 +2,9 @@
   <% @max_file_size = 256000 %>
 
   <textarea id="solution_content" type="text" name="solution[content]" class="hidden"></textarea>
-  <input id="upload-input" type="file" class="upload submission-control hidden" mu-upload-file-limit=<%= @max_file_size %> accept=".<%= @exercise.language.extension %>" />
+  <input id="mu-upload-input" type="file" class="upload submission-control hidden" mu-upload-file-limit=<%= @max_file_size %> accept=".<%= @exercise.language.extension %>" />
   <div>
-    <label id="mu-upload-label" for="upload-input" class="btn btn-success">
+    <label id="mu-upload-label" for="mu-upload-input" class="btn btn-success">
       <%= fa_icon(:upload, text: t(:select_file), id: "mu-upload-icon") %>
     </label>
     <div id="mu-upload-file-limit-exceeded" class="hidden">
