Add styles for new user menu

--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -27,4 +27,5 @@
 @import "modules/terms";
 @import "modules/timer";
 @import "modules/upload";
+@import "modules/user_menu";
 @import "modules/user_profile";
