--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,8 @@
   <%= breadcrumbs @user %>
 <% end %>
 
-<%= render partial: 'user_form' %>
+<%= render partial: 'layouts/user_menu' %>
+
+<div class="col-md-9 mu-tab-body">
+  <%= render partial: 'user_form' %>
+</div>
