Make links on user menu brand-colored

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_menu.scss
@@ -17,6 +17,10 @@
 .mu-user-menu-item {
   font-size: 17px;
   margin-bottom: 5px;
+
+  a {
+    color: $brand-primary;
+  }
 }
 
 .mu-user-menu-vertical-divider {
