Hide vertical divider on user menu if screen is small

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -9,5 +9,5 @@
       </div>
     </div>
   </div>
-  <div class="mu-user-menu-vertical-divider"></div>
+  <div class="mu-user-menu-vertical-divider hidden-sm hidden-xs"></div>
 </div>
