--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_user_profile.scss
@@ -31,11 +31,19 @@
   }
 }
 
+.mu-profile-info {
+  display: flex;
+  flex-wrap: wrap;
+
+  margin-top: 20px;
+}
+
 .mu-profile-info-left {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  flex-grow: 1;
 
   .mu-level-progress {
     position: relative;
@@ -62,8 +70,11 @@
 }
 
 .mu-profile-info-right {
+  flex-grow: 2;
+
   font-size: 20px;
   margin-top: 5px;
+
   div {
     margin-bottom: 15px;
     .italic {
