--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -22,5 +22,6 @@
       <% end %>
     </div>
   </div>
-  <div class="mu-user-menu-vertical-divider hidden-sm hidden-xs"></div>
+  <div class="mu-user-menu-divider vertical hidden-sm hidden-xs"></div>
 </div>
+<div class="mu-user-menu-divider horizontal visible-sm visible-xs"></div>
