--- a/app/views/users/messages.html.erb
+++ b/app/views/users/messages.html.erb
@@ -5,6 +5,9 @@
 <%= render partial: 'layouts/user_menu' %>
 
 <div class="col-md-9 mu-tab-body">
+  <div class="mu-user-header">
+    <h1><%= t(:messages) %></h1>
+  </div>
   <% if @messages.empty? %>
     <div class="mu-tab-body">
       <%= t :no_messages %>
