--- a/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_modules.scss
@@ -1,6 +1,7 @@
 @import "modules/avatar";
 @import "modules/book_header";
 @import "modules/breadcrumb";
+@import "modules/certificate";
 @import "modules/checkboxes";
 @import "modules/console";
 @import "modules/content_show";
