--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -15,6 +15,10 @@
         <%= discussions_user_menu_link %>
       </div>
     <% end %>
+    <div class="mu-user-menu-divider horizontal"></div>
+    <div class="mu-user-menu-item">
+      <%= certificates_user_menu_link %>
+    </div>
   </div>
   <div class="mu-user-menu-divider vertical hidden-sm hidden-xs"></div>
 </div>
