--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
@@ -8,7 +8,7 @@
 
     width: 100%;
 
-    @media (min-width: 768px) {
+    @include media-breakpoint-up(md) {
       width: 75%;
       float: right;
     }
@@ -19,7 +19,7 @@
       margin-bottom: 32px;
       word-wrap: anywhere;
 
-      @media (max-width: 767px) {
+      @include media-breakpoint-down(md) {
         &:not(.active) {
           h3, p {
             display: none
@@ -45,7 +45,7 @@
         margin-top: 10px;
         cursor: pointer;
         display: none;
-        @media (max-width: 767px) {
+        @include media-breakpoint-down(md) {
           display: unset;
         }
       }
