Show abbreviated discussor name in every case

--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -3,7 +3,7 @@
     <div class="discussion-message-bubble">
       <div class="discussion-message-bubble-header">
         <div class="discussion-message-bubble-title">
-          <%= user.name %>
+          <%= discussion_user_name user %>
         </div>
       </div>
       <div class="discussion-message-bubble-content">
