--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -15,7 +15,7 @@
     <div class="discussion-message-bubble" id="new-discussion-description-container">
       <div class="discussion-message-bubble-header">
         <div class="discussion-message-bubble-title">
-          <%= @discussion.initiator.name %>
+          <%= discussion_user_name @discussion.initiator %>
         </div>
       </div>
       <div class="discussion-message-bubble-content">
