--- a/app/views/users/activity.html.erb
+++ b/app/views/users/activity.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
   <%= render partial: 'layouts/user_menu' %>
 
-  <div class="col-md-9">
+  <div class="col-md-9 mu-tab-body">
     <div class="mu-user-header">
       <h1><%= t(:activity) %></h1>
     </div>
