--- a/app/views/exercises/_read_only.html.erb
+++ b/app/views/exercises/_read_only.html.erb
@@ -31,11 +31,10 @@
               <span><%= discussion_info(@discussion) unless @discussion.new_record? %></span>
             </span>
           </div>
-          <% if @discussion.last_moderator_access_visible_for?(current_user) %>
+          <% if @discussion.current_responsible_visible_for?(current_user) %>
             <h5 class="my-2 me-3">
               <span class="badge bg-primary text-wrap">
-                <%= t :last_seen, name: discussion_user_name(@discussion.last_moderator_access_by) %>
-                <%= t :time_since, time: time_ago_in_words(@discussion.last_moderator_access_at) %>
+                <%= t :moderator_will_reply, moderator: discussion_user_name(@discussion.responsible_moderator_by) %>
               </span>
             </h5>
           <% end %>
