--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -15,7 +15,7 @@
     <h3 class="flex-grow-1 me-3"><%= t :messages %></h3>
     <% if current_user && @discussion.persisted? %>
       <span class="d-flex">
-        <% if current_user.moderator_here? %>
+        <% if @discussion.can_toggle_responsible?(current_user) %>
           <div class="discussion-responsible me-1">
             <%= btn_toggle responsible_icon, not_responsible_icon, @discussion.any_responsible?, class: 'btn-sm',
                            onclick: "mumuki.Forum.discussionResponsible('#{responsible_discussion_url(@discussion)}')" %>
