--- a/app/views/exam_registrations/show.html.erb
+++ b/app/views/exam_registrations/show.html.erb
@@ -12,25 +12,27 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <div class="bs-callout bs-callout-info">
-      <h4 class="text-info">
-        <strong><%= fa_icon :info_circle %> <%= t :important_info %></strong>
-      </h4>
+    <div class="bs-callout bs-callout-<%= exam_registration_view[:class] %>">
+        <h4 class="text-<%= exam_registration_view[:class] %>">
+          <strong><%= fa_icon exam_registration_view[:icon] %> <%= t :important_info %></strong>
+        </h4>
       <p>
-        <%= t :exam_registration_explanation_html, date: l(@registration.end_time, format: :long) %>
+        <%= t exam_registration_view[:t], date: l(@registration.end_time, format: :long), location: Organization.current.time_zone %>
       </p>
     </div>
-    <%= form_for @authorization_request, html: {class: 'mu-form'} do |f| %>
-      <%= f.hidden_field :exam_registration_id, value: @registration.id %>
-      <%= f.label :exam_id, t(:exam_registration_choose_exam) %>
-      <% @registration.exams.each do |exam| %>
-        <div class="form-check">
-          <%= f.radio_button(:exam_id, exam.id, id: exam.id, required: true, class: 'form-check-input mu-read-only-input',
-                             checked: @authorization_request.exam_id == exam.id) %>
-          <%= label_tag exam.id, l(exam.start_time, format: :long), class: 'form-check-label' %>
-        </div>
+    <% unless @registration.end_time.past? %>
+      <%= form_for @authorization_request, html: {class: 'mu-form'} do |f| %>
+        <%= f.hidden_field :exam_registration_id, value: @registration.id %>
+        <%= f.label :exam_id, t(:exam_registration_choose_exam) %>
+        <% @registration.exams.each do |exam| %>
+          <div class="form-check">
+            <%= f.radio_button(:exam_id, exam.id, id: exam.id, required: true, class: 'form-check-input mu-read-only-input',
+                               checked: @authorization_request.exam_id == exam.id) %>
+            <%= label_tag exam.id, l(exam.start_time, format: :long), class: 'form-check-label' %>
+          </div>
+        <% end %>
+        <button class="btn btn-complementary"> <%= t :save %> </button>
       <% end %>
-      <button class="btn btn-complementary"> <%= t :save %> </button>
     <% end %>
   </div>
 </div>
